system/src/main/java/cql/lexicalparser/LexicalParser.java
package cql.lexicalparser;

import java.util.Arrays;
import java.util.HashSet;
import java.util.Set;
import java.util.function.Function;

import cql.Token;
import cql.TokenType;
import cql.lexicalparser.exceptions.LexicalParserException;

/*
 * That class implements a Lexical Analyzer and a simple Parser (Sintatical Analyzer).
 *
 * Lexical Analyzer : Scanner the string and split in a set of tokens.
 * 
 * Parser : Sort the tokens in a hierarquecal tree.
 * 
 *
 * */

public class LexicalParser {

	private String timeZoneGMT = "GMT-00";

	private static final Set<String> RESERVED_WORDS = new HashSet<>(Arrays.asList("ADD", "ALL", "ALTER", "AND", "ANY",
			"APPLY", "AS", "ASC", "ASCII", "AUTHORIZE", "BATCH", "BEGIN", "BIGINT", "BLOB", "BOOLEAN", "BY",
			"CLUSTERING", "COLUMNFAMILY", "COMPACT", "COUNT", "COUNTER", "CONSISTENCY", "CREATE", "DECIMAL", "DELETE",
			"DESC", "DOUBLE", "DROP", "EACH_QUORUM", "FLOAT", "FROM", "GRANT", "IN", "INDEX", "INET", "INSERT", "INT",
			"INTO", "KEYSPACE", "KEYSPACES", "LEVEL", "LIMIT", "LIST", "LOCAL_ONE", "LOCAL_QUORUM", "MAP", "MODIFY",
			"RECURSIVE", "SUPERUSER", "OF", "ON", "ONE", "ORDER", "PERMISSION", "PERMISSIONS", "PRIMARY", "QUORUM",
			"RENAME", "REVOKE", "SCHEMA", "SELECT", "SET", "STORAGE", "SUPERUSER", "TABLE", "TEXT", "TIMESTAMP",
			"TIMEUUID", "TO", "TOKEN", "THREE", "TRUNCATE", "TTL", "TWO", "TYPE", "UNLOGGED", "UPDATE", "USE", "USER",
			"USING", "UUID", "VALUES", "VARCHAR", "VARINT", "WITH", "WRITETIME", "WHERE"));

	// <SYMBOL> ::= = | + | - | / | * | ( | ) | { | } | , [ | ]
	private static final Set<Character> SYMBOLS = new HashSet<>(
			Arrays.asList('=', '+', '<', '>', '!', '-', '/', '*', '(', ')', '{', '}', ',', '[', ']'));

	public LexicalParser() {
	}

	public String getTimeZoneGMT() {
		return timeZoneGMT;
	}

	public void setTimeZoneGMT(String timeZoneGMT) {
		this.timeZoneGMT = timeZoneGMT;
	}

	private void buildLexicalParserException(Token token, String text) throws LexicalParserException {
		throw new LexicalParserException("Invalid " + token.getType().getName().toUpperCase() + " in [" + text + "]");
	}

	private void buildLexicalParserException(Token token, String text, String reason) throws LexicalParserException {
		reason = (reason == null) ? "" : ":" + reason;
		throw new LexicalParserException(
				"Invalid " + token.getType().getName().toUpperCase() + " in [" + text + "] " + reason);
	}

	private String consume(String text, char... stop) {
		StringBuffer ret = new StringBuffer();
		for (int index = 0; index < text.length(); index++) {
			for (char stopItem : stop) {
				if (text.charAt(index) == stopItem) {
					return ret.toString();
				}
			}
			ret.append(text.charAt(index));
		}
		return ret.toString();
	}

	// <ACESSOR> ::= .
	public Token isAcessor(String text, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.ACESSOR, this.timeZoneGMT);

		if (text.length() == 0 || !text.startsWith(".")) {
			if (required) {
				buildLexicalParserException(token, text);
			}
			return null;
		}

		token.setContent(".");
		token.setPosContent(text.substring(1));
		return token;
	}

	// <AND> ::= u(AND)
	public Token isAnd(String text, boolean required) throws LexicalParserException {

		return isSingleText(TokenType.AND, "AND", text, false, null, required);

	}

	// <ASTERISK> ::= *
	public Token isAsterisk(String text, boolean required) throws LexicalParserException {
		return isSingleText(TokenType.ASTERISK, "*", text, required);

	}

	// <CHARS> ::= ^<EMPTY>[<CHARS>](a-Z0-9_)
	public Token isChars(String text, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.CHARS, this.timeZoneGMT);

		StringBuffer content = new StringBuffer();

		if (text.isEmpty()) {
			if (required) {
				buildLexicalParserException(token, text);
			}
			return null;
		}

		for (int index = 0; index < text.length(); index++) {
			Character character = text.charAt(index);
			boolean valid = Character.isAlphabetic(text.codePointAt(index))
					|| Character.isDigit(text.codePointAt(index)) || character == '_';

			if (!valid) {
				if (content.length() > 0) {
					break;
				}
				if (required) {
					buildLexicalParserException(token, text);
				}
				return null;
			}

			content.append(character);
		}

		String contentStr = content.toString();

		token.setContent(contentStr);
		token.setPosContent(text.substring(contentStr.length()));
		return token;
	}

	// <DOUBLE DOT> ::= :
	public Token isDoubleDot(String text, boolean required) throws LexicalParserException {

		return isSingleText(TokenType.DOUBLE_DOT, ":", text, required);

	}

	// <COMA> ::= ,
	public Token isComma(String text, boolean required) throws LexicalParserException {

		return isSingleText(TokenType.COMMA, ",", text, required);

	}

	// <COMMAND>::=<CREATE COMMAND> | <DROP COMMAND> | <INSERT COMMAND> |
	// <CONDITIONAL COMMAND> [<SPACES> <LIMIT OPTION>] [<SPACES> <ALLOW
	// PARAMETER>]
	public Token isCommand(final String text, final boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.COMMAND, this.timeZoneGMT);

		Token leftToken = null;

		Token createCommand = isCreateCommand(text, false);

		leftToken = createCommand;

		if (leftToken == null) {
			Token dropCommand = isDropCommand(text, false);
			leftToken = dropCommand;
		}

		if (leftToken == null) {
			Token insertCommand = isInsertCommand(text, false);
			leftToken = insertCommand;
		}

		if (leftToken == null) {
			Token conditionalCommand = isConditionalCommand(text, required);
			leftToken = conditionalCommand;
		}

		if (leftToken == null) {
			return null;
		}

		token.getSubTokens().add(leftToken);

		Token tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			Token tokenLimitOption = isLimitOption(tokenSpaces.getPosContent(), false);
			if (tokenLimitOption != null) {
				updateNeighbors(leftToken, tokenSpaces);
				leftToken = tokenSpaces;
				token.getSubTokens().add(leftToken);

				updateNeighbors(leftToken, tokenLimitOption);
				leftToken = tokenLimitOption;
				token.getSubTokens().add(leftToken);
			}
		}

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {

			Token tokenAllowParameter = isAllowParameter(tokenSpaces.getPosContent(), false);
			if (tokenAllowParameter != null) {
				updateNeighbors(leftToken, tokenSpaces);
				leftToken = tokenSpaces;
				token.getSubTokens().add(leftToken);

				updateNeighbors(leftToken, tokenAllowParameter);
				leftToken = tokenAllowParameter;
				token.getSubTokens().add(leftToken);

			}
		}

		String content = text.substring(0, text.length() - leftToken.getPosContent().length());

		token.setContent(content);

		token.setPosContent(leftToken.getPosContent());

		return token;
	}

	// <LIMIT OPTION> ::= <LIMIT> <SPACES> <SPACES> (<NUMBER>|<INJECTION>)
	public Token isLimitOption(String content, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.LIMIT_OPTION, this.timeZoneGMT);

		Token limit = isLimit(content, required);
		Token left = null;

		if (limit == null) {
			if (required) {
				buildLexicalParserException(token, content);
			}
			return null;
		}

		left = limit;
		token.getSubTokens().add(left);

		Token spaces = isSpaces(left.getPosContent(), required);

		if (spaces == null) {
			if (required) {
				buildLexicalParserException(token, content);
			}
			return null;

		}

		updateNeighbors(left, spaces);
		left = spaces;
		token.getSubTokens().add(left);

		Token number = isNumber(left.getPosContent(), false);

		if (number != null) {

			updateNeighbors(left, number);
			left = number;
			token.getSubTokens().add(left);
		} else {
			Token inject = isInject(left.getPosContent(), required);
			if (inject == null) {
				if (required) {
					buildLexicalParserException(token, content);
				}
				return null;
			}
			updateNeighbors(left, inject);
			left = inject;
			token.getSubTokens().add(left);

		}
		content = content.substring(0, content.length() - left.getPosContent().length());
		token.setContent(content);
		token.setPosContent(left.getPosContent());
		return token;
	}

	// <LIMIT> ::= u(LIMIT)
	public Token isLimit(String content, boolean required) throws LexicalParserException {

		return isSingleText(TokenType.LIMIT, "LIMIT", content, false, null, required);

	}

	// <OTHER COMMAND> ::= ^<WHERE> <RESERVED WORDS> [<SPACES>] (<SELECTOR
	// BLOCK> | ( [<SYMBOL>] [<SPACES>] [<LITERAL>] )[<SPACES>] )
	// [[<SPACES>]<OTHER COMMAND>]
	public Token isOtherCommands(String text, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.OTHER_COMMAND, this.timeZoneGMT);

		Token leftToken = null;

		Token where = isWhere(text, false);
		if (where != null) {
			if (required) {
				buildLexicalParserException(token, text);
			}
			return null;
		}

		Token insertCommand = isReservedWord(text, required);
		if (insertCommand == null) {
			return null;

		}

		updateNeighbors(leftToken, insertCommand);
		leftToken = insertCommand;
		token.getSubTokens().add(leftToken);

		Token tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		// <OTHER COMMAND> ::= <RESERVED WORDS> [<SPACES>] (<SELECTOR BLOCK> | (
		// [<SYMBOL>] [<SPACES>] [<LITERAL>] [<SPACES>] ) [<OTHER COMMAND>]

		Token tokenSelectorBlock = isSelectorBlock(leftToken.getPosContent(), false);
		if (tokenSelectorBlock == null) {
			Token tokenSymbol = isSymbol(leftToken.getPosContent(), false);
			if (tokenSymbol != null) {
				updateNeighbors(leftToken, tokenSymbol);
				leftToken = tokenSymbol;
				token.getSubTokens().add(leftToken);
			}

			tokenSpaces = isSpaces(leftToken.getPosContent(), false);
			if (tokenSpaces != null) {
				updateNeighbors(leftToken, tokenSpaces);
				leftToken = tokenSpaces;
				token.getSubTokens().add(leftToken);
			}

			Token tokenLiteral = isLiteral(leftToken.getPosContent(), false);
			if (tokenLiteral != null) {
				updateNeighbors(leftToken, tokenLiteral);
				leftToken = tokenLiteral;
				token.getSubTokens().add(leftToken);
			}

			tokenSpaces = isSpaces(leftToken.getPosContent(), false);
			if (tokenSpaces != null) {
				updateNeighbors(leftToken, tokenSpaces);
				leftToken = tokenSpaces;
				token.getSubTokens().add(leftToken);
			}
		} else {
			updateNeighbors(leftToken, tokenSelectorBlock);
			leftToken = tokenSelectorBlock;
			token.getSubTokens().add(leftToken);
		}

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			Token otherCommands = isOtherCommands(tokenSpaces.getPosContent(), false);
			if (otherCommands != null) {
				updateNeighbors(leftToken, tokenSpaces);
				leftToken = tokenSpaces;
				token.getSubTokens().add(leftToken);

				updateNeighbors(leftToken, otherCommands);
				leftToken = otherCommands;
				token.getSubTokens().add(leftToken);
			}
		}

		String content = text.substring(0, text.length() - leftToken.getPosContent().length());

		token.setContent(content);
		token.setPosContent(leftToken.getPosContent());

		return token;
	}

	// <INSERT COMMAND> ::= <INSERT> <SPACES> [<INTO> <SPACES>] <<TABLE NAME
	// DECLARATION>>
	// [<SPACES>] <START_PARAMETERS> [<SPACES>] <FIELD LIST> [<SPACES>]
	// <END_PARAMETERS> [<SPACES>] <VALUES> [<SPACES>] <START_PARAMETERS>
	// [<SPACES>] [<SELECTOR BLOCK>] [<SPACES>] <END_PARAMETERS>

	/**
	 * @param text
	 * @param required
	 * @return
	 * @throws LexicalParserException
	 */
	public Token isInsertCommand(String text, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.INSERT_COMMAND, this.timeZoneGMT);

		Token leftToken = null;

		Token tokenInsert = isInsert(text, required);
		if (tokenInsert == null) {
			return null;
		}

		updateNeighbors(leftToken, tokenInsert);
		leftToken = tokenInsert;
		token.getSubTokens().add(leftToken);

		Token tokenSpaces = isSpaces(leftToken.getPosContent(), required);
		if (tokenSpaces == null) {
			return null;
		}
		updateNeighbors(leftToken, tokenSpaces);
		leftToken = tokenSpaces;
		token.getSubTokens().add(leftToken);

		Token tokenInto = isInto(leftToken.getPosContent(), false);
		if (tokenInto != null) {
			updateNeighbors(leftToken, tokenInto);
			leftToken = tokenInto;
			token.getSubTokens().add(tokenInto);

			tokenSpaces = isSpaces(leftToken.getPosContent(), required);
			if (tokenSpaces == null) {
				return null;
			}
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		Token tokenTableNameDeclaration = isTableNameDeclaration(leftToken.getPosContent(), required);
		if (tokenTableNameDeclaration == null) {
			return null;
		}

		updateNeighbors(leftToken, tokenTableNameDeclaration);
		leftToken = tokenTableNameDeclaration;
		token.getSubTokens().add(leftToken);

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		Token startParams = isStartParameters(leftToken.getPosContent(), required);
		if (startParams == null) {
			return null;
		}

		updateNeighbors(leftToken, startParams);
		leftToken = startParams;
		token.getSubTokens().add(leftToken);

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		Token tokenFieldList = isFieldList(leftToken.getPosContent(), required);
		if (tokenFieldList == null) {
			return null;
		}
		updateNeighbors(leftToken, tokenFieldList);
		leftToken = tokenFieldList;
		token.getSubTokens().add(leftToken);

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		Token endParams = isEndParameters(leftToken.getPosContent(), required);
		if (endParams == null) {
			return null;
		}
		updateNeighbors(leftToken, endParams);
		leftToken = endParams;
		token.getSubTokens().add(leftToken);

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		Token tokenValues = isValues(leftToken.getPosContent(), required);
		if (tokenValues == null) {
			return null;
		}
		updateNeighbors(leftToken, tokenValues);
		leftToken = tokenValues;
		token.getSubTokens().add(leftToken);

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		startParams = isStartParameters(leftToken.getPosContent(), required);
		if (startParams == null) {
			return null;
		}
		updateNeighbors(leftToken, startParams);
		leftToken = startParams;
		token.getSubTokens().add(leftToken);

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		Token tokenSelectorBlock = isSelectorBlock(leftToken.getPosContent(), required);
		if (tokenSelectorBlock == null) {
			return null;
		}
		updateNeighbors(leftToken, tokenSelectorBlock);
		leftToken = tokenSelectorBlock;
		token.getSubTokens().add(leftToken);

		tokenSpaces = isSpaces(leftToken.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(leftToken, tokenSpaces);
			leftToken = tokenSpaces;
			token.getSubTokens().add(leftToken);
		}

		endParams = isEndParameters(leftToken.getPosContent(), required);
		if (endParams == null) {
			return null;
		}
		updateNeighbors(leftToken, endParams);
		leftToken = endParams;
		token.getSubTokens().add(leftToken);

		String content = text.substring(0, text.length() - leftToken.getPosContent().length());
		token.setContent(content);
		token.setPosContent(leftToken.getPosContent());

		return token;
	}

	// <CONDITION>::=<WHERE><SPACES><CONDITIONS>
	public Token isCondition(String text, boolean required) throws LexicalParserException {
		return isDoubleTokensSpaceded(text, required, TokenType.CONDITION, this::isWhere, this::isConditions);
	}

	// <CONDITION-ITEM>::= <SELECTOR ITEM>[<SPACES>]<OPTIONAL PAIR
	// SYMBOL>[<SPACES>]<SELECTOR ITEM>

	public Token isConditionItem(final String text, final boolean required) throws LexicalParserException {

		Token token = new Token(TokenType.CONDITION_ITEM, this.timeZoneGMT);

		Token tokenSelectorItem = isSelectorItemStrict(text, required);

		String content = text;

		if (tokenSelectorItem == null) {
			if (required) {
				buildLexicalParserException(token, text);
			}
			return null;
		}

		Token left = tokenSelectorItem;
		token.getSubTokens().add(left);

		Token tokenSpaces = isSpaces(left.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(left, tokenSpaces);
			left = tokenSpaces;
			token.getSubTokens().add(left);
		}

		Token tokenSymbol = isOptionalPairSymbol(left.getPosContent(), false);
		if (tokenSymbol == null) {
			if (required) {
				buildLexicalParserException(token, left.getPosContent(), "Expected OPTIONAL PAIR SYMBOL");
			}
			return null;
		}

		updateNeighbors(left, tokenSymbol);
		left = tokenSymbol;
		token.getSubTokens().add(left);

		tokenSpaces = isSpaces(left.getPosContent(), false);
		if (tokenSpaces != null) {
			updateNeighbors(left, tokenSpaces);
			left = tokenSpaces;

			token.getSubTokens().add(left);
		}

		Token tokenSelectorItem2 = isSelectorItemStrict(left.getPosContent(), false);
		if (tokenSelectorItem2 == null) {
			return null;
		}

		updateNeighbors(left, tokenSelectorItem2);
		left = tokenSelectorItem2;
		token.getSubTokens().add(left);

		content = content.substring(0, content.length() - left.getPosContent().length());
		token.setContent(content);
		token.setPosContent(left.getPosContent());
		return token;
	}

	// <CONDITIONS>::=<CONDITION-ITEM>[<SPACES> <JOIN CONDITION> <SPACES>
	// <CONDITIONS>]

	public Token isConditions(final String text, final boolean required) throws LexicalParserException {
		Token left = null;
		Token token = new Token(TokenType.CONDITIONS, this.timeZoneGMT);
		String content = text;

		Token tokenOptionalSpace = null;
		Token tokenOptionalJoin = null;
		Token tokenOptionalConditions = null;

		Token tokenConditionItem = isConditionItem(text, required);
		updateNeighbors(left, tokenConditionItem);
		left = tokenConditionItem;

		if (left == null) {
			if (required) {
				buildLexicalParserException(token, text);
			}
			return null;
		}

		token.getSubTokens().add(left);

		tokenOptionalSpace = isSpaces(left.getPosContent(), false);

		if (tokenOptionalSpace != null) {
			tokenOptionalJoin = isJoinCondition(tokenOptionalSpace.getPosContent(), false);

			if (tokenOptionalJoin != null) {
				Token tokenOptionalSpace2 = isSpaces(tokenOptionalJoin.getPosContent(), false);

				if (tokenOptionalSpace2 != null) {
					tokenOptionalConditions = isConditions(tokenOptionalSpace2.getPosContent(), false);

					if (tokenOptionalConditions != null) {

						updateNeighbors(left, tokenOptionalSpace);
						left = tokenOptionalSpace;
						token.getSubTokens().add(tokenOptionalSpace);

						updateNeighbors(left, tokenOptionalJoin);
						left = tokenOptionalJoin;
						token.getSubTokens().add(tokenOptionalJoin);

						updateNeighbors(left, tokenOptionalSpace2);
						left = tokenOptionalSpace2;
						token.getSubTokens().add(tokenOptionalSpace2);

						updateNeighbors(left, tokenOptionalConditions);
						left = tokenOptionalConditions;
						token.getSubTokens().add(tokenOptionalConditions);

						content = content.substring(0,
								content.length() - tokenOptionalConditions.getPosContent().length());
						token.setContent(content);
						token.setPosContent(tokenOptionalConditions.getPosContent());
						return token;
					}
				}
			}

		}

		content = content.substring(0, content.length() - left.getPosContent().length());

		token.setContent(content);
		token.setPosContent(left.getPosContent());
		return token;

	}

	// <CQL>::= [<SPACES>] <COMMAND> [ <SPACES>] [<USING OPTION>] [<DOT COMMA>
	// [<SPACES>]]
	public Token isCQL(String cql) throws LexicalParserException {

		Token tokenCQL = new Token(TokenType.CQL, this.timeZoneGMT);
		tokenCQL.setContent(cql);
		Token left = null;

		Token tokenSpace = isSpaces(cql, false);
		if (tokenSpace != null) {
			tokenCQL.getSubTokens().add(tokenSpace);
			left = tokenSpace;
		}

		Token tokenCommand = isCommand((left == null) ? cql : left.getPosContent(), true);
		if (tokenCommand == null) {
			throw new LexicalParserException("Token command not found");
		}

		updateNeighbors(left, tokenCommand);
		left = tokenCommand;
		tokenCQL.getSubTokens().add(left);

		tokenSpace = isSpaces(left.getPosContent(), false);
		if (tokenSpace != null) {

			updateNeighbors(left, tokenSpace);
			left = tokenSpace;
			tokenCQL.getSubTokens().add(left);

		}

		Token tokenUsingOption = isUsingOption(left.getPosContent(), false);

		if (tokenUsingOption != null) {

			updateNeighbors(left, tokenUsingOption);
			left = tokenUsingOption;
			tokenCQL.getSubTokens().add(left);
		}

		Token tokenDotcomma = isDotComma(left.getPosContent(), false);

		if (tokenDotcomma != null) {

			updateNeighbors(left, tokenDotcomma);
			left = tokenDotcomma;
			tokenCQL.getSubTokens().add(left);
		}

		tokenSpace = isSpaces(left.getPosContent(), false);
		if (tokenSpace != null) {

			updateNeighbors(left, tokenSpace);
			left = tokenSpace;
			tokenCQL.getSubTokens().add(left);
		}

		if (!left.getPosContent().isEmpty()) {
			throw new LexicalParserException("CEU Lexical Error near [" + left.getPosContent() + "]");
		}

		return tokenCQL;
	}

	// <DOUBLE QUOTED> ::= "
	public Token isDoubleQuoted(String text, boolean required) throws LexicalParserException {
		return isSingleText(TokenType.DOUBLE_QUOTED, "\"", text, required);
	}

	// <END PARAMETERS>::=)
	public Token isEndParameters(String text, boolean required) throws LexicalParserException {

		return isSingleText(TokenType.END_PARAMETERS, ")", text, required);

	}

	// <FUNCTION>::=<ITEM NAME>[<SPACES>]<START_PARAMETERS>[<SPACES>][<SELECTOR
	// BLOCK>][<SPACES>]<END_PARAMETERS>
	public Token isFunction(String content, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.FUNCTION, this.timeZoneGMT);

		if (content.length() < 3) {
			if (required) {
				buildLexicalParserException(token, content);
			}
			return null;
		}

		Token left = null;

		Token itemName = isItemName(content, required);

		if (itemName == null) {
			if (required) {
				buildLexicalParserException(token, content);
			}
			return null;
		}

		left = itemName;
		token.getSubTokens().add(left);

		Token spaces = isSpaces(left.getPosContent(), false);

		if (spaces != null) {
			updateNeighbors(left, spaces);
			left = spaces;
			token.getSubTokens().add(left);
		}

		Token startParameters = isStartParameters(left.getPosContent(), required);

		if (startParameters == null) {
			if (required) {
				buildLexicalParserException(token, left.getPosContent());
			}
			return null;
		}
		updateNeighbors(left, startParameters);
		left = startParameters;
		token.getSubTokens().add(left);

		spaces = isSpaces(left.getPosContent(), false);

		if (spaces != null) {
			updateNeighbors(left, spaces);
			left = spaces;
			token.getSubTokens().add(left);
		}

		Token selectorBlock = isSelectorBlock(left.getPosContent(), required);

		if (selectorBlock != null) {
			updateNeighbors(left, selectorBlock);
			left = selectorBlock;
			token.getSubTokens().add(left);
		}

		spaces = isSpaces(left.getPosContent(), false);

		if (spaces != null) {
			updateNeighbors(left, spaces);
			left = spaces;
			token.getSubTokens().add(left);
		}

		Token endParameters = isEndParameters(left.getPosContent(), required);

		if (endParameters == null) {
			if (required) {
				buildLexicalParserException(token, left.getPosContent());
			}
			return null;
		}

		updateNeighbors(left, endParameters);
		left = endParameters;
		token.getSubTokens().add(left);

		content = content.substring(0, content.length() - left.getPosContent().length());
		token.setContent(content);
		token.setPosContent(left.getPosContent());
		return token;
	}

	// <HEXA>::= [<SIGN>] <START HEX> <ABSOLUTE HEXA>
	public Token isHexa(String text, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.HEX, this.timeZoneGMT);
		Token left = null;

		Token sign = isSign(text, false);
		if (sign != null) {

			updateNeighbors(left, sign);

			left = sign;

			token.getSubTokens().add(left);

		}

		String posContent = (left == null) ? text : left.getPosContent();

		Token startHex = isStartHexa(posContent, required);
		if (startHex == null) {
			return null;
		}
		updateNeighbors(left, startHex);

		left = startHex;

		token.getSubTokens().add(left);

		Token absoluteHex = isAbsoluteHexa(left.getPosContent(), required);

		if (absoluteHex == null) {
			return null;
		}

		updateNeighbors(left, absoluteHex);
		left = absoluteHex;
		token.getSubTokens().add(left);

		token.setContent(text.substring(0, text.length() - left.getPosContent().length()));
		token.setPosContent(left.getPosContent());
		return token;
	}

	// <INJECT> ::= ?
	public Token isInject(String text, boolean required) throws LexicalParserException {
		Token token = new Token(TokenType.INJECT, this.timeZoneGMT);

		if (text.length() == 0 || text.charAt(0) != '?') {
			if (required) {
				buildLexicalParserException(token, text);

			}
			return null;
		}
